--- a/index.jade
+++ b/index.jade
@@ -16,7 +16,7 @@ html
 			form#binaryconverter
 				.form-group.center
 					input(id="number", type="number")
-					button(id="check", type="submit", class="button") CHECK!
+					button(id="convert", type="submit", class="button") CONVERT!
 					
 			#result.center
 				p.center RESULTS: #[span.sentence]
